--- a/jsShisenSho/css/default.css
+++ b/jsShisenSho/css/default.css
@@ -1,19 +1,27 @@
-body {
-	color: #000000;
-	font-family: Arial, Helvetica, sans-serif;
+body
+{
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
 }
-h1 {
-	background-color: rgb(111,255,5);
+h1
+{
+    background-color: rgb(111,255,5);
 }
-
 .MenuContainer
 {
-	font-weight:bold;
-	background-color: #0b5075;
-	color:#ffffff;
+    font-weight: bold;
+    background-color: #0b5075;
+    color: #ffffff;
 }
-
 .MenuContainer a
 {
-	color: #ffffff;
+    color: #ffffff;
+}
+.GamePiece1
+{
+    background: transparent url('/images/tilesets/TileSet2.png') no-repeat -5px -1px;
+    width: 34px;
+    height: 50px;
+    border: solid 1px #000000;
+    padding: 0px;
 }
