--- a/jsShisenSho/css/default.css
+++ b/jsShisenSho/css/default.css
@@ -19,9 +19,15 @@ h1
 }
 .GamePiece1
 {
-    background: transparent url('/images/tilesets/TileSet2.png') no-repeat -5px -1px;
+    background: transparent url('../images/tilesets/TileSet2.png') no-repeat -5px -1px;
     width: 34px;
     height: 50px;
-    border: solid 1px #000000;
+    border: solid 2px #000000;
     padding: 0px;
+}
+
+#divGameContainer{
+	height:650px;
+	width:1250px;
+    border: double 2px #000000;
 }
