--- a/GameServerTracker/PHP/css/layout.css
+++ b/GameServerTracker/PHP/css/layout.css
@@ -1,11 +1,3 @@
-/*
-    Document   : layout.css
-    Created on : May 26, 2013, 9:55:14 PM
-    Author     : andy
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
 root {
     display: block;
 }
@@ -14,9 +6,13 @@ form {
     display: inline;
 }
 
-body {
+html, body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10pt;
+    color: black;
+    background-color: #fffee7;
+    display: block;
+    height: 100%;
 }
 
 .LoginTable {
@@ -28,15 +24,24 @@ body {
 }
 
 #browserSupportContainer {
-    border: 1px solid #000000;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-top-color: black;
+    border-right-color: black;
+    border-bottom-color: black;
+    border-left-color: black;
 }
 
 .PadAll5px {
-    padding: 5px;
-}
-
-.PadSides5px {
+    padding-top: 5px;
     padding-right: 5px;
+    padding-bottom: 5px;
     padding-left: 5px;
 }
 
@@ -45,3 +50,39 @@ body {
     padding-left: 5px;
 }
 
+.PadSides5px {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+
+#documentSection {
+    width: 1200px;
+    min-height: 100%;
+    height: 100%;
+    
+    border-top-color: black;
+    border-right-color: black;
+    border-bottom-color: black;
+    border-left-color: black;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    background-color: white;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+}
+
+#headerLogoText {
+    font-family: 'Finger Paint', cursive;
+    font-size: 24pt;
+    font-weight: bold;
+    font-variant: small-caps;
+}
