--- a/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
+++ b/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/GridLayout1"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
+    style="@style/AppTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@style/AppTheme"
     android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,13 +13,95 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <android.view.View android:id="@+id/View1"
-        android:layout_gravity="left"
-        />
-
     <Space
-        android:layout_column="1"
-        android:layout_gravity="fill_vertical"
-        android:layout_row="1" />
+        android:id="@+id/Space1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill_vertical"/>
 
-</GridLayout>
+    <GridLayout
+        android:id="mainActivityGridView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:alignmentMode="alignBounds"
+        android:columnCount="2"
+        android:layoutMode="clipBounds"
+        android:rowCount="3" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="148dp"
+            android:layout_height="148dp"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_row="1"
+            android:layout_rowSpan="1"
+            android:contentDescription="@string/imagePlaceholder"
+            android:src="@drawable/startupimage" />
+
+        <RelativeLayout
+            android:id="letterPlacementLayout"
+            android:layout_width="341dp"
+            android:layout_height="181dp"
+            android:layout_column="0"
+            android:layout_gravity="bottom|left"
+            android:layout_row="2"
+            android:layout_rowSpan="1" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="120dp"
+                android:layout_marginLeft="19dp"
+                android:text="@string/genericLetterPlaceholder"
+                android:textColor="#6F0000"
+                android:textSize="22pt"
+                android:textStyle="bold|italic"
+                android:typeface="serif" />
+
+        </RelativeLayout>
+
+        <TableLayout
+            android:id="letterSelectTable"
+            android:layout_width="569dp"
+            android:layout_height="match_parent"
+            android:layout_column="1"
+            android:layout_columnSpan="1"
+            android:layout_gravity="left|top"
+            android:layout_row="1"
+            android:layout_rowSpan="2" >
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+            </TableRow>
+        </TableLayout>
+
+    </GridLayout>
+
+</RelativeLayout>
