--- a/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
+++ b/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/mainViewLayout"
     style="@style/AppTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +20,7 @@
         android:layout_gravity="fill_vertical"/>
 
     <GridLayout
-        android:id="mainActivityGridView"
+        android:id="@+id/mainActivityGridView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
             android:src="@drawable/startupimage" />
 
         <RelativeLayout
-            android:id="letterPlacementLayout"
+            android:id="@id/mainViewLayout"
             android:layout_width="341dp"
             android:layout_height="181dp"
             android:layout_column="0"
@@ -68,7 +68,7 @@
         </RelativeLayout>
 
         <TableLayout
-            android:id="letterSelectTable"
+            android:id="@+id/letterSelectTableLayout"
             android:layout_width="569dp"
             android:layout_height="match_parent"
             android:layout_column="1"
@@ -100,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
             </TableRow>
+
         </TableLayout>
 
     </GridLayout>
