--- a/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
+++ b/Andriod/SpellingModual/src/SpellingStarter/res/layout/activity_main.xml
@@ -1,10 +1,9 @@
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<GridLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainViewLayout"
     style="@style/AppTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@style/AppTheme"
     android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,25 +12,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Space
-        android:id="@+id/Space1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_vertical"/>
-
     <GridLayout
         android:id="@+id/mainActivityGridView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_column="0"
+        android:layout_gravity="fill"
+        android:layout_row="0"
         android:alignmentMode="alignBounds"
         android:columnCount="2"
         android:layoutMode="clipBounds"
         android:rowCount="3" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageWordView"
             android:layout_width="148dp"
             android:layout_height="148dp"
             android:layout_column="0"
@@ -40,6 +32,7 @@
             android:layout_row="1"
             android:layout_rowSpan="1"
             android:contentDescription="@string/imagePlaceholder"
+            android:scaleType="fitCenter"
             android:src="@drawable/startupimage" />
 
         <RelativeLayout
@@ -51,20 +44,6 @@
             android:layout_row="2"
             android:layout_rowSpan="1" >
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginBottom="120dp"
-                android:layout_marginLeft="19dp"
-                android:text="@string/genericLetterPlaceholder"
-                android:textColor="#6F0000"
-                android:textSize="22pt"
-                android:textStyle="bold|italic"
-                android:typeface="serif" />
-
             <Button
                 android:id="@+id/testTableLoadButton"
                 style="?android:attr/buttonStyleSmall"
@@ -72,9 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="41dp"
-                android:layout_toRightOf="@+id/textView1"
                 android:text="@string/testTableLoad" />
-
         </RelativeLayout>
 
         <TableLayout
@@ -86,9 +63,7 @@
             android:layout_gravity="left|top"
             android:layout_row="1"
             android:layout_rowSpan="2" >
-
         </TableLayout>
-
     </GridLayout>
 
-</RelativeLayout>
+</GridLayout>
